--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <hi>
     Mathis Hraimel-Dolovitz
   </hi>
-  <p>STEAM Club Member</p>
+  <p>STEAM Club Member. I am a responsible member who follows the bro-code. One of my hobbies is grinding.</p>
 </body>
 </html>
