--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!doctype html>
 <html>
   <head></head>
 <img
-  src-"https://static.wikia.nocookie.net/jojos-bizzare-fanon/images/d/d0/HierophantGreen_AnimeAV.png/revision/latest?cb=20191103111937" 
+  src="https://static.wikia.nocookie.net/jojos-bizzare-fanon/images/d/d0/HierophantGreen_AnimeAV.png/revision/latest?cb=20191103111937" 
 />
   <body>
   <hi>
