--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!doctype html>
 <html>
   <head></head>
-<img
-  src="https://static.wikia.nocookie.net/jojos-bizzare-fanon/images/d/d0/HierophantGreen_AnimeAV.png/revision/latest?cb=20191103111937" 
-/>
   <body>
-  <hi>
-    Mathis Hraimel-Dolovitz
-  </hi>
-  <p>STEAM Club Member. I am a responsible member who follows the bro-code. One of my hobbies is grinding.</p>
+    <img src="https://static.wikia.nocookie.net/jojos-bizzare-fanon/images/d/d0/HierophantGreen_AnimeAV.png/revision/latest?cb=20191103111937" />
+    <hi>
+      Mathis Hraimel-Dolovitz
+    </hi>
+    <p>STEAM Club Member. I am a responsible member who follows the bro-code. One of my hobbies is grinding.</p>
 </body>
 </html>
