--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
   <body>
     <img src="https://static.wikia.nocookie.net/jojos-bizzare-fanon/images/d/d0/HierophantGreen_AnimeAV.png/revision/latest?cb=20191103111937" />
     <hi>
