--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="https://static.wikia.nocookie.net/jojos-bizzare-fanon/images/d/d0/HierophantGreen_AnimeAV.png/revision/latest?cb=20191103111937" />
+    <img src="https://static.wikia.nocookie.net/ff8d2f4c-5c70-4e6d-974d-0c5138fc0e91/scale-to-width/755" />
     <hi>
       Mathis Hraimel-Dolovitz
     </hi>
     <p>STEAM Club Member. I am a responsible member who follows the bro-code. One of my hobbies is grinding.</p>
-</body>
+  </body>
 </html>
